--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,23 @@
 version: '3.5'
 
 services:
+  elasticsearch:
+    container_name: es-container
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.16.2
+    environment:
+      - xpack.security.enabled=false
+      - "discovery.type=single-node"
+
+  kibana:
+    container_name: kb-container
+    image: docker.elastic.co/kibana/kibana:7.16.2
+    environment:
+      - ELASTICSEARCH_HOSTS=http://es-container:9200
+    depends_on:
+      - elasticsearch
+    ports:
+      - 5601:5601
+
   zeppelin:
     image: apache/zeppelin:0.10.0
     environment: {}
